# mechanical-blender

intern/gawain/: BUILD.bazel
intern/glew-mx/: BUILD.bazel
intern/memutil/: BUILD.bazel
intern/mikktspace/: BUILD.bazel
intern/opencolorio/: BUILD.bazel
source/blender/datatoc/: BUILD.bazel
source/blenderplayer/: BUILD.bazel
