
cc_binary(
    name = "datatoc",
    srcs = [
        "datatoc.c",
    ],
)

"""
# Build datatoc_icon executable

if(NOT WITH_HEADLESS)

	set(SRC
		datatoc_icon.c
	)

	if(WIN32)
		include_directories(
			../blenlib
			../../../intern/utfconv
		)

		# for winstuff_dir.c
		add_definitions(-DUSE_STANDALONE)

		list(APPEND SRC
			../blenlib/intern/winstuff_dir.c
			../../../intern/utfconv/utfconv.c
		)

		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${PLATFORM_LINKFLAGS}")
		set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} ${PLATFORM_LINKFLAGS_DEBUG}")
	endif()

	include_directories(${PNG_INCLUDE_DIRS})
	link_directories(${PNG_LIBPATH} ${ZLIB_LIBPATH})

	add_executable(datatoc_icon ${SRC})

	target_link_libraries(datatoc_icon ${PNG_LIBRARIES} ${ZLIB_LIBRARIES})
	# PNG library uses pow() and floow(), so seems -lm is required for proper
	# workign binary.
	if(UNIX AND NOT APPLE)
		target_link_libraries(datatoc_icon m)
	endif()
endif()
"""
